-- Dimensional Data Store (DDS) executable DDL.
-- shift_id remains a degenerate dimension on facts; no dds.dim_shift table is
-- created by contract.

CREATE SCHEMA IF NOT EXISTS dds;

CREATE TABLE IF NOT EXISTS dds.dim_date (
    date_key INT PRIMARY KEY,
    date DATE NOT NULL,
    day INT NOT NULL CHECK (day BETWEEN 1 AND 31),
    month INT NOT NULL CHECK (month BETWEEN 1 AND 12),
    month_name VARCHAR(20) NOT NULL,
    quarter INT NOT NULL CHECK (quarter BETWEEN 1 AND 4),
    year INT NOT NULL,
    day_of_week INT NOT NULL CHECK (day_of_week BETWEEN 1 AND 7),
    day_name VARCHAR(20) NOT NULL,
    is_weekend BOOLEAN NOT NULL,
    is_holiday BOOLEAN NOT NULL DEFAULT false,
    week_of_year INT NOT NULL CHECK (week_of_year BETWEEN 1 AND 53),
    CONSTRAINT ux_dim_date_date UNIQUE (date)
);

CREATE TABLE IF NOT EXISTS dds.dim_time (
    time_key INT PRIMARY KEY,
    time_of_day TIME NOT NULL,
    hour INT NOT NULL CHECK (hour BETWEEN 0 AND 23),
    minute INT NOT NULL CHECK (minute BETWEEN 0 AND 59),
    time_bucket VARCHAR(20) NOT NULL,
    is_peak_hour BOOLEAN NOT NULL DEFAULT false,
    CONSTRAINT dim_time_key_range CHECK (time_key BETWEEN 0 AND 2359),
    CONSTRAINT ux_dim_time_time_of_day UNIQUE (time_of_day)
);

CREATE TABLE IF NOT EXISTS dds.dim_driver (
    driver_key INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    driver_id VARCHAR(50) NOT NULL,
    driver_code VARCHAR(50) NOT NULL,
    display_name VARCHAR(100) NOT NULL,
    home_borough VARCHAR(100) NOT NULL,
    employment_status VARCHAR(50) NOT NULL,
    license_status VARCHAR(50) NOT NULL,
    license_expiry_date DATE NOT NULL,
    experience_years INT NOT NULL CHECK (experience_years >= 0),
    start_date TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    end_date TIMESTAMP WITHOUT TIME ZONE NULL,
    is_current BOOLEAN NOT NULL DEFAULT true,
    source_event_id VARCHAR(50) NULL,
    source_row_hash CHAR(64) NOT NULL,
    batch_id UUID NOT NULL REFERENCES audit.metadata_etl_batch (batch_id),
    CONSTRAINT dim_driver_end_after_start
        CHECK (end_date IS NULL OR end_date >= start_date),
    CONSTRAINT ux_dim_driver_version UNIQUE (driver_id, start_date),
    CONSTRAINT ux_dim_driver_change_identity UNIQUE (driver_id, start_date, source_row_hash)
);

CREATE INDEX IF NOT EXISTS ix_dim_driver_lookup
    ON dds.dim_driver (driver_id, is_current);

CREATE UNIQUE INDEX IF NOT EXISTS ux_dim_driver_current
    ON dds.dim_driver (driver_id) WHERE is_current;

CREATE TABLE IF NOT EXISTS dds.dim_vehicle (
    vehicle_key INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vehicle_id VARCHAR(50) NOT NULL,
    plate_token VARCHAR(100) NOT NULL,
    model_year INT NOT NULL,
    vehicle_type VARCHAR(50) NOT NULL,
    vehicle_status VARCHAR(50) NOT NULL,
    last_inspection_date DATE NOT NULL,
    start_date TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    end_date TIMESTAMP WITHOUT TIME ZONE NULL,
    is_current BOOLEAN NOT NULL DEFAULT true,
    source_event_id VARCHAR(50) NULL,
    source_row_hash CHAR(64) NOT NULL,
    batch_id UUID NOT NULL REFERENCES audit.metadata_etl_batch (batch_id),
    CONSTRAINT dim_vehicle_end_after_start
        CHECK (end_date IS NULL OR end_date >= start_date),
    CONSTRAINT ux_dim_vehicle_version UNIQUE (vehicle_id, start_date),
    CONSTRAINT ux_dim_vehicle_change_identity UNIQUE (vehicle_id, start_date, source_row_hash)
);

CREATE INDEX IF NOT EXISTS ix_dim_vehicle_lookup
    ON dds.dim_vehicle (vehicle_id, is_current);

CREATE UNIQUE INDEX IF NOT EXISTS ux_dim_vehicle_current
    ON dds.dim_vehicle (vehicle_id) WHERE is_current;

CREATE TABLE IF NOT EXISTS dds.dim_vendor (
    vendor_key INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vendor_id INT NOT NULL,
    vendor_name VARCHAR(100) NOT NULL,
    batch_id UUID NOT NULL REFERENCES audit.metadata_etl_batch (batch_id),
    CONSTRAINT ux_dim_vendor_business_key UNIQUE (vendor_id)
);

CREATE TABLE IF NOT EXISTS dds.dim_location (
    location_key INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    location_id INT NOT NULL,
    borough VARCHAR(100) NOT NULL,
    zone VARCHAR(100) NOT NULL,
    service_zone VARCHAR(50) NULL,
    CONSTRAINT ux_dim_location_business_key UNIQUE (location_id)
);

CREATE TABLE IF NOT EXISTS dds.dim_junk_trip (
    junk_trip_key INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    payment_type_desc VARCHAR(50) NOT NULL,
    ratecode_desc VARCHAR(100) NOT NULL,
    trip_type_desc VARCHAR(50) NOT NULL,
    assignment_method VARCHAR(50) NOT NULL,
    is_anomaly BOOLEAN NOT NULL DEFAULT false,
    CONSTRAINT ux_dim_junk_trip_combination UNIQUE (
        payment_type_desc,
        ratecode_desc,
        trip_type_desc,
        assignment_method,
        is_anomaly
    )
);

CREATE TABLE IF NOT EXISTS dds.fact_driver_trip (
    fact_trip_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    trip_id TEXT NOT NULL,
    shift_id VARCHAR(50) NOT NULL,
    pickup_date_key INT NOT NULL REFERENCES dds.dim_date (date_key),
    pickup_time_key INT NOT NULL REFERENCES dds.dim_time (time_key),
    dropoff_date_key INT NOT NULL REFERENCES dds.dim_date (date_key),
    dropoff_time_key INT NOT NULL REFERENCES dds.dim_time (time_key),
    driver_key INT NOT NULL REFERENCES dds.dim_driver (driver_key),
    vehicle_key INT NOT NULL REFERENCES dds.dim_vehicle (vehicle_key),
    vendor_key INT NOT NULL REFERENCES dds.dim_vendor (vendor_key),
    pickup_location_key INT NOT NULL REFERENCES dds.dim_location (location_key),
    dropoff_location_key INT NOT NULL REFERENCES dds.dim_location (location_key),
    junk_trip_key INT NOT NULL REFERENCES dds.dim_junk_trip (junk_trip_key),
    passenger_count INT NULL,
    trip_distance DECIMAL(12, 4) NULL,
    trip_duration_minutes DECIMAL(10, 2) NULL,
    fare_amount DECIMAL(10, 2) NOT NULL,
    extra DECIMAL(10, 2) NOT NULL,
    mta_tax DECIMAL(10, 2) NOT NULL,
    tip_amount DECIMAL(10, 2) NOT NULL,
    tolls_amount DECIMAL(10, 2) NOT NULL,
    improvement_surcharge DECIMAL(10, 2) NOT NULL,
    total_amount DECIMAL(10, 2) NOT NULL,
    assignment_delay_minutes DECIMAL(10, 2) NULL,
    source_file VARCHAR(255) NOT NULL,
    source_row_number INT NOT NULL CHECK (source_row_number >= 2),
    batch_id UUID NOT NULL REFERENCES audit.metadata_etl_batch (batch_id),
    CONSTRAINT ux_fact_trip_business_key UNIQUE (trip_id)
);

CREATE INDEX IF NOT EXISTS ix_fact_trip_pickup_date
    ON dds.fact_driver_trip (pickup_date_key);

CREATE INDEX IF NOT EXISTS ix_fact_trip_shift
    ON dds.fact_driver_trip (shift_id);

ALTER TABLE dds.fact_driver_trip
    ALTER COLUMN trip_distance TYPE DECIMAL(12, 4);

CREATE TABLE IF NOT EXISTS dds.fact_driver_shift (
    fact_shift_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shift_id VARCHAR(50) NOT NULL,
    shift_start_date_key INT NOT NULL REFERENCES dds.dim_date (date_key),
    shift_start_time_key INT NOT NULL REFERENCES dds.dim_time (time_key),
    driver_key INT NOT NULL REFERENCES dds.dim_driver (driver_key),
    vehicle_key INT NOT NULL REFERENCES dds.dim_vehicle (vehicle_key),
    vendor_key INT NOT NULL REFERENCES dds.dim_vendor (vendor_key),
    shift_status VARCHAR(50) NOT NULL,
    shift_start TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    shift_end TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    is_anomaly BOOLEAN NOT NULL DEFAULT false,
    shift_duration_minutes DECIMAL(12, 2) NOT NULL,
    trip_count INT NOT NULL DEFAULT 0 CHECK (trip_count >= 0),
    occupied_minutes DECIMAL(12, 2) NOT NULL DEFAULT 0.00 CHECK (occupied_minutes >= 0.00),
    idle_minutes DECIMAL(12, 2) NOT NULL DEFAULT 0.00 CHECK (idle_minutes >= 0.00),
    utilization_rate DECIMAL(5, 4) NOT NULL DEFAULT 0.0000
        CHECK (utilization_rate >= 0.0000),
    total_revenue DECIMAL(12, 2) NOT NULL DEFAULT 0.00,
    total_tips DECIMAL(12, 2) NOT NULL DEFAULT 0.00,
    batch_id UUID NOT NULL REFERENCES audit.metadata_etl_batch (batch_id),
    CONSTRAINT fact_driver_shift_end_after_start CHECK (shift_end >= shift_start),
    CONSTRAINT ux_fact_shift_business_key UNIQUE (shift_id)
);

CREATE INDEX IF NOT EXISTS ix_fact_shift_start_date
    ON dds.fact_driver_shift (shift_start_date_key);

CREATE INDEX IF NOT EXISTS ix_fact_shift_driver
    ON dds.fact_driver_shift (driver_key);
